--- a/impl/build.gradle
+++ b/impl/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     implementation "com.github.SenhLinsh:Utils-Everywhere:$deps.UtilsEverywhere"
     implementation "com.squareup.okhttp3:okhttp:$deps.okhttp"
 
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
