--- a/impl/build.gradle
+++ b/impl/build.gradle
@@ -71,6 +71,6 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
 
     implementation 'com.github.SenhLinsh:LshViews:1.0.1'
-    implementation 'com.github.SenhLinsh:LshApp-protocol:66a750f8ca'
+    implementation 'com.github.SenhLinsh:LshApp-protocol:0.5'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 }
