--- a/impl/src/debug/AndroidManifest.xml
+++ b/impl/src/debug/AndroidManifest.xml
@@ -2,10 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.linsh.protocol.impl">
 
-    <application>
-        <activity
-            android:name=".MainActivity"
-            android:theme="@style/Base.Theme.AppCompat.Light.DarkActionBar">
+    <application
+        android:name=".DemoApplication"
+        android:label="ImplDemo"
+        android:theme="@style/Base.Theme.AppCompat.Light.DarkActionBar">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
